# pallet-detection-and-segmentation

./: README.md  requirements.txt
ros_ws/src/image_publisher_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/image_publisher_pkg/image_publisher_pkg/: image_publisher_node.py
ros_ws/src/object_detection_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/object_detection_pkg/object_detection_pkg/: image_processing_node.py  object_detection_node.py
